--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Github Battle</title>
   </head>
   <body>
     <div id="app"></div>
